--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "4.0.3",
     "sass": "^1.57.1",
+    "styled-components": "^5.3.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
